Button position changed from sticky to fixed
This allows collapsible element to overlap game map

--- a/treasure-map/src/SASS/Actions.sass
+++ b/treasure-map/src/SASS/Actions.sass
@@ -3,9 +3,11 @@
 
 
 .actions
-    width: 100%
+    width: 99.6%
     display: flex
     flex-direction: row
+    position: fixed
+    bottom: 0px
     justify-content: space-between
     align-items: flex-end
     div
@@ -25,6 +27,7 @@
             background-color: gold
             border: 2px solid black
             padding-top: 20px
+            z-index: 2
             h4
                 width: 35%
                 text-align: center
